Atualizações necessárias.